--- a/src/scss/about-page.scss
+++ b/src/scss/about-page.scss
@@ -44,3 +44,29 @@
 
     color: #000000;
 }
+
+.call-to-action-button {
+    width: 213px;
+    height: 58px;
+
+    background: rgba(143, 96, 220, 0.85);
+
+    display: flex;
+
+    text-decoration: none;
+}
+
+.call-to-action-button-text {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 27px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #FFFFFF;
+
+    margin: auto;
+}
