--- a/src/scss/about-page.scss
+++ b/src/scss/about-page.scss
@@ -70,3 +70,27 @@
 
     margin: auto;
 }
+
+.page-minor-header {
+    height: 112px;
+
+    background: rgba(241, 234, 249, 0.85);
+
+    display: flex;
+
+    flex-direction: column;
+}
+
+.page-minor-header-text {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 35px;
+    align-items: center;
+    text-align: center;
+
+    color: #000000;
+
+    margin: auto;
+}
