--- a/src/scss/about-page.scss
+++ b/src/scss/about-page.scss
@@ -94,3 +94,18 @@
 
     margin: auto;
 }
+
+.oswald-header {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 53px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #000000;
+
+    margin: auto;
+}
