✨ Platform basic page

--- a/src/scss/about-page.scss
+++ b/src/scss/about-page.scss
@@ -45,6 +45,19 @@
     color: #000000;
 }
 
+.page-description-large-text {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 33px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #000000;
+}
+
 .call-to-action-button {
     width: 213px;
     height: 58px;
