--- a/src/scss/about-page.scss
+++ b/src/scss/about-page.scss
@@ -32,7 +32,7 @@
 
 .page-description-box {
     background: rgba(255, 255, 255, 0.89);
-    padding: 5%;
+    padding: 5vh;
 }
 
 .page-description-text {
